src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_multi_session_stats.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_beta_sub                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (3 entries)───────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
││  2 Beta session - Main agent response 1                                                         │
│── ↓5.0k/5.0k ↑500/500 / $0.04 | Context: 5.5k (2%) ──                                            │
││  3 Beta session - Main agent response 2                                                         │
│── ↓6.0k/6.0k ↑600/600 / $0.04 | Context: 6.6k (3%) ──                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics (Main Agent) ─────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  11,000                                                                                  │
│  Output: 1,100                                                                                   │
│  Total:  12,100                                                                                  │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.08                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 2/2 │ Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
