src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_stats_main_tab.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: main_tab_output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_sub_001                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (3 entries)───────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
││  2 Main agent response 1                                                                        │
│── ↓1.0k/1.0k ↑100/100 / $0.01 | Context: 1.1k (0%) ──                                            │
││  3 Main agent response 2                                                                        │
│── ↓2.0k/2.0k ↑200/200 / $0.01 | Context: 2.2k (1%) ──                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics (Main Agent) ─────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  3,000                                                                                   │
│  Output: 300                                                                                     │
│  Total:  3,300                                                                                   │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.02                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
