src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_stats_subagent_tab.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: subagent_tab_output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_sub_001                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_sub_001 [Haiku] (2 entries)─────────────────────────────────────────────────────────────────┐
││  1 Subagent response 1                                                                          │
│── 50 in / 10 out / $0.00 | Context: 50 (0%) ──                                                   │
││  2 Subagent response 2                                                                          │
│── 75 in / 15 out / $0.00 | Context: 125 (0%) ──                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics ──────────────────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  3,125                                                                                   │
│  Output: 325                                                                                     │
│  Total:  3,450                                                                                   │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.07                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | [ ]: Tabs | 1-9: Select tab | Tab: Cycle panes
