src/tests/snapshots/cclv__tests__acceptance_stats_session_mismatch__bug_stats_zeros_after_modal_switch.snap
---
source: src/tests/acceptance_stats_session_mismatch.rs
expression: output_after_switch
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_alpha_sub                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (3 entries)───────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
││  2 Alpha session - Main agent response 1                                                        │
│── ↓1.0k/1.0k ↑100/100 / $0.01 | Context: 1.1k (0%) ──                                            │
││  3 Alpha session - Main agent response 2                                                        │
│── ↓1.5k/1.5k ↑150/150 / $0.01 | Context: 1.6k (0%) ──                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics (Main Agent) ─────────────────────────────────────────────────────────────────────────┐
│Tokens:                                                                                           │
│  Input:  2,500                                                                                   │
│  Output: 250                                                                                     │
│  Total:  2,750                                                                                   │
│                                                                                                  │
│Estimated Cost:                                                                                   │
│  $0.02                                                                                           │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 1/2 │ Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
